[gd_scene load_steps=22 format=3 uid="uid://c7f6508qdreu5"]

[ext_resource type="Texture2D" uid="uid://b43tiaa6bcftw" path="res://assets/Tilelists/rectangle_red_flag (1).jpg" id="1_fy5ra"]
[ext_resource type="Script" path="res://tutorial.gd" id="1_kn1ef"]
[ext_resource type="PackedScene" uid="uid://c6o7a2rnidocp" path="res://console.tscn" id="3_oqyhi"]
[ext_resource type="Texture2D" uid="uid://t81nxoi3h506" path="res://assets/Untitled_Artwork (1).png" id="4_ht4mf"]
[ext_resource type="FontFile" uid="uid://ce5cdq13xtfrh" path="res://actualImages/dogicapixelbold.otf" id="5_5glke"]
[ext_resource type="FontFile" uid="uid://djo3h61omkyru" path="res://actualImages/dogicapixel.otf" id="5_jpeu8"]
[ext_resource type="Texture2D" uid="uid://cup7ytx086pwk" path="res://actualImages/Untitled_Artwork 2 (2).png" id="6_gsdhk"]
[ext_resource type="Texture2D" uid="uid://y0pqgpuedg5" path="res://actualImages/Untitled_Artwork 3.png" id="7_c88gy"]
[ext_resource type="Texture2D" uid="uid://cdlj7s7j2c7ed" path="res://actualImages/pixil-frame-0 (14).png" id="8_05fqg"]
[ext_resource type="StyleBox" uid="uid://bw7qctq1ieulf" path="res://test.tres" id="10_1bnc3"]
[ext_resource type="Texture2D" uid="uid://dv1v1rwh6mx32" path="res://button.png" id="11_iyi0i"]
[ext_resource type="AudioStream" uid="uid://bae7rg3u5t8v8" path="res://actualImages/distant-explosion-47562.mp3" id="12_f28kf"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_05g1e"]
texture = ExtResource("6_gsdhk")
texture_region_size = Vector2i(166, 111)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_gr2vp"]
texture = ExtResource("7_c88gy")
texture_region_size = Vector2i(166, 111)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_pgjtv"]
texture = ExtResource("8_05fqg")
texture_region_size = Vector2i(166, 111)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_8ikjf"]
tile_size = Vector2i(166, 111)
sources/0 = SubResource("TileSetAtlasSource_05g1e")
sources/1 = SubResource("TileSetAtlasSource_gr2vp")
sources/3 = SubResource("TileSetAtlasSource_pgjtv")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a2awp"]
bg_color = Color(0.396028, 0.667396, 0.534251, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a5qbf"]
bg_color = Color(0.274468, 0.542517, 0.266512, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2o2fp"]
bg_color = Color(0.458981, 0.660521, 0.458815, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1mvko"]
bg_color = Color(0.343237, 0.686795, 0.429871, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rf7bq"]
bg_color = Color(0.70631, 0.296146, 0.259656, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.0253638, 0.0253638, 0.0253638, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Tutorial" type="Node2D"]
script = ExtResource("1_kn1ef")

[node name="GridBG" type="Sprite2D" parent="."]
visible = false
modulate = Color(0, 0.570306, 0.389793, 0.352941)
self_modulate = Color(0.827977, 0.658564, 0.677227, 0.305882)
position = Vector2(960, 632)
scale = Vector2(2.08, 1.568)
texture = ExtResource("1_fy5ra")

[node name="MissileLauncher" type="Marker2D" parent="."]

[node name="Console" parent="." instance=ExtResource("3_oqyhi")]
z_index = -5
position = Vector2(1091, 106)
scale = Vector2(6.16867, 2.90991)

[node name="Background" type="Sprite2D" parent="."]
z_index = -10
position = Vector2(898, 596.387)
scale = Vector2(1.24339, 1.51125)
texture = ExtResource("4_ht4mf")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 817.0
offset_top = 55.0
offset_right = 1381.0
offset_bottom = 170.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_constants/line_separation = 15
theme_override_fonts/normal_font = ExtResource("5_jpeu8")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
scroll_following = true

[node name="Grid" type="TileMap" parent="."]
unique_name_in_owner = true
top_level = true
position = Vector2(128, 240)
tile_set = SubResource("TileSet_8ikjf")
format = 2
layer_0/tile_data = PackedInt32Array(262151, 0, 0, 196612, 0, 0, 131074, 0, 0)
layer_1/z_index = -1
layer_1/tile_data = PackedInt32Array()

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = 260.0
offset_top = 69.0
offset_right = 628.0
offset_bottom = 133.0
tooltip_text = "How much of your cure is done!!

- camps closer to zombies progress cure faster"
mouse_default_cursor_shape = 1
theme_type_variation = &"024"
theme_override_styles/background = SubResource("StyleBoxFlat_a2awp")
theme_override_styles/fill = SubResource("StyleBoxFlat_a5qbf")
step = 0.5

[node name="CureLabel" type="Label" parent="."]
offset_left = 337.0
offset_top = 39.0
offset_right = 539.0
offset_bottom = 70.0
theme_override_fonts/font = ExtResource("5_5glke")
text = "Cure  Progress"

[node name="AddCamp" type="Button" parent="."]
unique_name_in_owner = true
offset_left = 1587.0
offset_top = 31.0
offset_right = 1881.0
offset_bottom = 167.0
theme_override_fonts/font = ExtResource("5_5glke")
theme_override_styles/normal = SubResource("StyleBoxFlat_2o2fp")
theme_override_styles/hover = SubResource("StyleBoxFlat_1mvko")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1mvko")
text = "Add  (Camps: 10)"

[node name="MissileButton" type="Button" parent="."]
unique_name_in_owner = true
offset_left = -8.0
offset_top = -119.0
offset_right = 230.0
offset_bottom = 172.0
theme_override_fonts/font = ExtResource("5_5glke")
theme_override_font_sizes/font_size = 15
theme_override_styles/normal = ExtResource("10_1bnc3")
theme_override_styles/hover = SubResource("StyleBoxFlat_rf7bq")
text = "Launch Missiles"

[node name="MissileIcon" type="Sprite2D" parent="."]
position = Vector2(107, 109)
scale = Vector2(0.73, 0.765)
texture = ExtResource("11_iyi0i")

[node name="Explosion" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_f28kf")

[connection signal="button_down" from="AddCamp" to="." method="_on_add_camp_button_down"]
[connection signal="pressed" from="MissileButton" to="." method="_on_missile_button_pressed"]
